--- a/SelfIn-Frontend/selfin-app/package.json
+++ b/SelfIn-Frontend/selfin-app/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~9.1.2",
     "@angular/platform-browser-dynamic": "~9.1.2",
     "@angular/router": "~9.1.2",
+    "@types/dom-to-image": "^2.6.0",
+    "@types/file-saver": "^2.0.1",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.5",
     "ngx-webcam": "^0.3.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
