--- a/SelfIn-Frontend/selfin-app/package.json
+++ b/SelfIn-Frontend/selfin-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.2",
     "@types/dom-to-image": "^2.6.0",
     "@types/file-saver": "^2.0.1",
+    "bootstrap": "^4.4.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.5",
