--- a/SelfIn-Frontend/selfin-app/package.json
+++ b/SelfIn-Frontend/selfin-app/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~9.1.2",
     "@angular/platform-browser-dynamic": "~9.1.2",
     "@angular/router": "~9.1.2",
+    "@kamiazya/ngx-speech-recognition": "^0.4.3",
     "@types/dom-to-image": "^2.6.0",
     "@types/file-saver": "^2.0.1",
+    "@types/lodash": "^4.14.150",
     "bootstrap": "^4.4.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.2",
@@ -28,6 +30,7 @@
     "ngx-webcam": "^0.3.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
+    "vocabulator": "^0.2.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
